Fixed header and login on small mobile phones changed add to basket button

--- a/Store/css/Slideshow.css
+++ b/Store/css/Slideshow.css
@@ -1,18 +1,16 @@
 /* Holds the slide show and centers it in the window (EC) */
 #SlideshowContainer {
     width: 100%;
-    margin: auto;
     position: relative;
 }
 
 /* Slideshow  (EC) */
 .slide {
     width: 100%;
+    height: 30%;
     background-color: lightgray;
     display: block;
     border-radius: 10px;
-    margin-top: 5%;
-    margin-bottom: 5%;
 }
 
 /* Pin image to the left of slide (EC) */
@@ -20,6 +18,7 @@
     display: inherit;
     border-radius: 10px;
     width: 50%;
+    margin: auto;
 }
 
 /* Slide info text centering (EC) */
@@ -64,9 +63,6 @@
 
 /* Small desktop window (EC) */
 @media only screen and (min-width: 768px) {
-    #SlideshowContainer {
-        width: 60%;
-    }
 
     /* Cycle left button pin (EC) */
     .pinLeft {
@@ -96,7 +92,8 @@
 /* Large desktop window (EC) */
 @media only screen and (min-width: 1301px) {
     #SlideshowContainer {
-        width: 50%;
+        width: 75%;
+        margin: auto;
     }
 
     /* Cycle left button pin (EC) */
